add_subdirectory(Unit2/part1)
add_subdirectory(Unit2/part2)
add_subdirectory(Unit2/part3)
add_subdirectory(Unit2/part4)
add_subdirectory(Unit2/part5)
add_subdirectory(Unit2/part6)
add_subdirectory(Unit2/part7)
add_subdirectory(Unit2/part8)

add_subdirectory(Unit3/part1)
add_subdirectory(Unit3/part2)